    library names, for example.

  - Avoid problems when there are null entries (None or '') in tool
    lists or CPPPATH.

  - Add an example and explanation of how to use "tools = ['default', ..."
    when creating a construction environment.

  - Add a section describing File and Directory Nodes and some of their
    attributes and methods.

  From Simon Perkins:

  - Fix a bug introduced in building shared libraries under MinGW.

  From Kevin Quick:

  - Handling SCons exceptions according to Pythonic standards.

  - Fix test/chained-build.py on systems that execute within one second.

  - Fix tests on systems where 'ar' warns about archive creation.

  From Anthony Roach:

  - Fix use of the --implicit-cache option with timestamp signatures.

  - If Visual Studio is installed, assume the C/C++ compiler, the linker
    and the MIDL compiler that comes with it are available, too.

  - Better error messages when evaluating a construction variable
    expansion yields a Python syntax error.

  - Change the generation of PDB files when using Visual Studio from
    compile time to link time.

  From sam th:

  - Allow SConf.CheckLib() to search a list of libraries, like the
    Autoconf AC_SEARCH_LIBS macro.

  - Allow the env.WhereIs() method to take a "reject" argument to
    let it weed out specific path names.



RELEASE 0.95 - Mon, 08 Mar 2004 06:43:20 -0600

  From Chad Austin:

  - Replace print statements with calls to sys.stdout.write() so output
    lines stay together when -j is used.

  - Add portability fixes for a number of tests.

  - Accomodate the fact that Cygwin's os.path.normcase() lies about
    the underlying system being case-sensitive.

  - Fix an incorrect _concat() call in the $RCINCFLAGS definition for
    the mingw Tool.

  - Fix a problem with the msvc tool with Python versions prior to 2.3.

  - Add support for a "toolpath" Tool() and Environment keyword that
    allows Tool modules to be found in specified local directories.
